--- a/styles/components/banner.css
+++ b/styles/components/banner.css
@@ -1,2 +1,10 @@
 .banner {
+  display: grid;
+  grid-template-columns: 1.4fr 1fr;
+  margin-top: 5rem;
+  padding: 5rem 0;
+}
+
+.banner .right img {
+  width: 100%;
 }
