--- a/styles/styles.css
+++ b/styles/styles.css
@@ -27,6 +27,21 @@ h6 {
 
 p {
   font-family: "Poppins", sans-serif;
+  color: #00000099;
+  font-size: 0.9rem;
+}
+
+h1 {
+  font-size: 4rem;
+  margin: 0;
+  line-height: 4.5rem;
+}
+
+h3 {
+  font-size: 1.5rem;
+  margin: 0;
+  font-family: "Poppins", sans-serif;
+  color: #255983;
 }
 
 .container {
@@ -34,9 +49,60 @@ p {
   margin: 0 auto;
 }
 
-.caixa {
-  width: 200px;
-  height: 200px;
-  background-color: red;
-  padding: 20px;
+.title-section {
+  color: #8b80f9;
+  font-weight: 600;
+  background-color: #d1ccfe;
+  padding: 0 20px;
+  position: relative;
+}
+
+.title-section::before {
+  content: "";
+  position: absolute;
+  width: 40px;
+  height: 1px;
+  background-color: black;
+  left: -55px;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+}
+
+.color-primary {
+  color: #8b80f9;
+}
+
+.button {
+  display: inline-block;
+  background-color: #8b80f9;
+  text-decoration: none;
+  color: #fff;
+  font-weight: 600;
+  font-size: 0.8rem;
+  border-radius: 4px;
+  padding: 8px 30px 8px 12px;
+  position: relative;
+}
+
+.button::after {
+  content: "";
+  position: absolute;
+  background-image: url("data:image/svg+xml,<svg width='559' height='395' viewBox='0 0 559 395' fill='none' xmlns='http://www.w3.org/2000/svg'><path d='M376.212 7.14557C372.634 2.85647 367.419 0.270575 361.841 0.0205746C356.263 -0.233335 350.833 1.87217 346.884 5.82137C342.939 9.77057 340.829 15.1964 341.083 20.7744C341.337 26.3564 343.923 31.5714 348.212 35.1454L491.072 178.165H18.882C12.0187 178.533 5.827 182.404 2.499 188.415C-0.833 194.423 -0.833 201.724 2.499 207.735C5.8271 213.747 12.0185 217.618 18.882 217.981H491.072L347.992 360.841C344.39 364.615 342.383 369.627 342.383 374.841C342.383 380.056 344.39 385.071 347.992 388.841C351.703 392.564 356.738 394.654 361.992 394.654C367.246 394.654 372.285 392.564 375.992 388.841L552.952 211.881V211.885C556.757 208.221 558.909 203.166 558.909 197.885C558.909 192.6 556.757 187.545 552.952 183.885L376.212 7.14557Z' fill='white'/></svg>");
+  background-size: 0.8rem;
+  width: 13px;
+  height: 9px;
+  right: 10px;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+}
+
+.button:hover::after {
+  transition: 0.3s all ease;
+  right: 5px;
+}
+
+.margin-top-20 {
+  margin-top: 20px;
 }
