--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,600;1,700&family=Poppins:wght@300&display=swap");
 
+@import "./components/helpers.css";
+
 @import "./components/header.css";
 @import "./components/banner.css";
 
@@ -12,6 +14,7 @@
   -moz-osx-font-smoothing: grayscale;
   scroll-behavior: smooth;
 }
+
 body {
   font-size: 20px;
 }
@@ -44,11 +47,6 @@ h3 {
   color: #255983;
 }
 
-.container {
-  width: 85%;
-  margin: 0 auto;
-}
-
 .title-section {
   color: #8b80f9;
   font-weight: 600;
@@ -67,10 +65,6 @@ h3 {
   top: 0;
   bottom: 0;
   margin: auto;
-}
-
-.color-primary {
-  color: #8b80f9;
 }
 
 .button {
@@ -101,8 +95,4 @@ h3 {
 .button:hover::after {
   transition: 0.3s all ease;
   right: 5px;
-}
-
-.margin-top-20 {
-  margin-top: 20px;
 }
