ajustes no footer

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,6 +7,7 @@
 @import "./components/pages/banner.css";
 @import "./components/pages/services.css";
 @import "./components/pages/contact.css";
+@import "./components/pages/footer.css";
 
 * {
   font-family: "Poppins", sans-serif;
